fix: remove unneeded org logic